2006-03-29  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/indirect_dispatch.c:
	* GL/glx/indirect_dispatch_swap.c:
	* GL/glx/indirect_size_get.c: Regenerate these files using updated
	scripts to avoid unused variable warnings.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPutImage), (exaGetImage):
	Bug #2986: Add PutImage acceleration for the ZPixmap,
	planeMask ~= FB_ALLONES, bitsPerPixel >= 8, GXcopy cases.  With the
	radeon driver on my machine, this gives about 10% speedup in PutImage
	10x10 and 500x500, and 40% speedup for 10x10 ShmPutImage, up to 65%
	improvement in 500x500 ShmPutImage.  Also fixes a crasher in GetImage
	that slipped in at the last minute.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrUploadToScreen), (ephyrDrawInit):
	Add an UploadToScreen implementation, for testing PutImage support, and
	make the DownloadFromScreen more robust.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaGetImage):
	* exa/exa_priv.h:
	Bug #2986: Add acceleration of GetImage using DownloadFromScreen for the
	ZPixmap, planeMask ~= FB_ALLONES, bitsPerPixel >= 8 case.  I'm pretty
	convinced that this is the only case that we care about at all.  Tested
	with xwd -root and xwd on a gnome-terminal, in a composited environment
	or not.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrDrawInit), (exaDDXDriverInit):
	Add a DownloadFromScreen implementation, used for testing GetImage
	acceleration, and set the migration scheme to Always on init (since
	this is all for testing, and Always should make migration happen more
	frequently than Greedy).

2006-3-29   Deron Johnson  <deron.johnson@sun.com>

        * xorg/composite/compinit.c
        * xorg/composite/compwindow.c
        * xorg/dix/window.c
        * xorg/include/window.h
	Fix composite overlay window bug 6411.
	