@@ -121,7 +121,8 @@ miFillPolyHelper (pDrawable, pGC, pixel, spanData, y, overall_height,
     	oldPixel = pGC->fgPixel;
     	if (pixel != oldPixel)
     	{
-    	    DoChangeGC (pGC, GCForeground, (XID *)&pixel, FALSE);
+	    XID tmpPixel = (XID)pixel;
+    	    DoChangeGC (pGC, GCForeground, tmpPixel, FALSE);
     	    ValidateGC (pDrawable, pGC);
     	}
     }
@@ -219,7 +220,8 @@ miFillRectPolyHelper (
     	oldPixel = pGC->fgPixel;
     	if (pixel != oldPixel)
     	{
-    	    DoChangeGC (pGC, GCForeground, (XID *)&pixel, FALSE);
+	    XID tmpPixel = (XID)pixel;
+    	    DoChangeGC (pGC, GCForeground, tmpPixel, FALSE);
     	    ValidateGC (pDrawable, pGC);
     	}
 	(*pGC->ops->PolyFillRect) (pDrawable, pGC, 1, &rect);
@@ -1070,7 +1072,8 @@ miLineArc (
     	oldPixel = pGC->fgPixel;
     	if (pixel != oldPixel)
     	{
-	    DoChangeGC(pGC, GCForeground, (XID *)&pixel, FALSE);
+	    XID tmpPixel = (XID)pixel;
+	    DoChangeGC(pGC, GCForeground, tmpPixel, FALSE);
 	    ValidateGC (pDraw, pGC);
     	}
     }
