@@ -1,3 +1,14 @@
+2006-03-30  Egbert Eich  <eich_at_freedesktop_dot_org>
+
+	* include/colormapst.h:
+	* include/pixmapstr.h:
+	* mi/miwideline.c: (miFillRectPolyHelper), (miLineArc):
+	Fixes for some vsw4 failures on 64bit BE platforms such as
+	PPC64 and s390x. Provided by Hong Bo Peng of IBM (slightly
+	modified). Patches try to resolve some of the careless
+	mixtures of ulong and uint (which are different size on
+	64bit). Bugzilla #6438.
+	
 2006-03-29  Kristian Høgsberg  <krh@redhat.com>
 
 	* GL/glx/indirect_dispatch.c:
